[gd_scene load_steps=4 format=3 uid="uid://bfk0gndl5ctbx"]

[ext_resource type="Script" path="res://Scenes/MainMenu/Scripts/OptionsMenu.gd" id="1_qssna"]
[ext_resource type="PackedScene" uid="uid://c86otpi8u40yy" path="res://Prefabs/Volume_Slider/volume_slider.tscn" id="2_ogwhf"]
[ext_resource type="Theme" uid="uid://bug47d73a6l83" path="res://Scenes/MainMenu/Assets/Themes/MainMenu.tres" id="3_8mmey"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qssna")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.129412, 0.141176, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Master Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Master Slider" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_ogwhf")]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
bus_name = "Master"

[node name="Music Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music Slider" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_ogwhf")]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
bus_name = "Music"

[node name="SFX Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SFX Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX Slider" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_ogwhf")]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
bus_name = "SFX"

[node name="Seperator" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Res Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resolution
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resolutions" type="OptionButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
selected = 1
item_count = 5
popup/item_0/text = "2560 x 1440"
popup/item_1/text = "1920 x 1080"
popup/item_1/id = 1
popup/item_2/text = "1280 x 720"
popup/item_2/id = 2
popup/item_3/text = "1024 x 600"
popup/item_3/id = 4
popup/item_4/text = "800 x 600"
popup/item_4/id = 5

[node name="Seperator3" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullScreen" type="CheckBox" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_8mmey")
theme_override_font_sizes/font_size = 30
button_pressed = true
text = "Fullscreen"
alignment = 1

[node name="Seperator2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperator4" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_8mmey")
theme_override_font_sizes/font_size = 30
text = "Back"

[connection signal="item_selected" from="MarginContainer/HBoxContainer/VBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/VBoxContainer/FullScreen" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Back" to="." method="_on_quit_pressed"]
